# Redline

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Redline-UX-Flow-and-Redesign.html  dealsheet.md  mac-app.md  mcp.md  open-source-readiness.md  providers.md  rules.md
macos/RedlineMac/: AppIcon.icns  Package.swift
macos/RedlineMac/Sources/Redline/App/: RedlineMacApp.swift
macos/RedlineMac/Sources/Redline/Data/: SampleData.swift
macos/RedlineMac/Sources/Redline/Design/: Theme.swift
macos/RedlineMac/Sources/Redline/Models/: DocListSection.swift  RedlineModels.swift  ReviewModels.swift  RunPhase.swift  Workspace.swift
macos/RedlineMac/Sources/Redline/Services/: DealContext.swift  DealSourceAdapter.swift  ExportWriter.swift  LibraryStore.swift  RedlineRunner.swift  ReportAdapter.swift  ReviewContextBuilder.swift  RunPreflight.swift  RunSheetFileIntake.swift  RunSourceFileStore.swift  SourcePDFState.swift
macos/RedlineMac/Sources/Redline/Views/: CheckingOverlayView.swift  ContentView.swift  DocumentActionsMenu.swift  DocumentPaneView.swift  EmptyStateView.swift  HomeView.swift  Icons.swift  (+8 more)
macos/RedlineMac/Tests/RedlineTests/: CodableTests.swift  DealSourceTests.swift  DocumentSectionTests.swift  ExportWriterTests.swift  LibraryStoreTests.swift  RealEngineIntegrationTests.swift  ReportAdapterTests.swift  ReviewContextBuilderTests.swift  RunFailureTests.swift  RunPreflightTests.swift  RunSheetFileIntakeTests.swift  SmokeTests.swift  SourcePDFStateTests.swift  WorkspaceInteractionTests.swift  WorkspacePersistenceTests.swift  WorkspaceRunFlowTests.swift
script/: build_and_run.sh  make_app_icon.swift  package_release.sh  release.sh
scripts/: check_release_safety.py
src/redline/: __init__.py  cli.py  deal.py  errors.py  extractor.py  focus.py  llm.py  mcp_server.py  models.py  money_words.py  pdf_text.py  pipeline.py  profiles.py  report.py  rules.py  thread_distill.py
tests/: helpers.py  test_cli.py  test_deal.py  test_extractor.py  test_focus.py  test_llm.py  test_mcp_server.py  test_money_words.py  test_pdf_text.py  test_report.py  test_rules.py  test_thread_distill.py
tests/fixtures/: pembina_per_face_facts.json
